# kubernetes-infra-project

./: .gitignore  README.md  build-images.sh  deploy.sh
broadcast-app/: Dockerfile  README.md  pyproject.toml
broadcast-app/broadcast/: broadcast.py
broker-app/: Dockerfile  mosquitto.conf
kubernetes/: broadcast-app-deployment.yml  broker-app-deployment.yml  broker-app-service.yml  deploy.sh  receive-app-deployment.yml  receive-app-service.yml
receive-app/: Dockerfile  README.md  pyproject.toml
receive-app/receive/: receive.py
receive-app/receive/static/js/: main.js
receive-app/receive/templates/: index.html
